[FIX] website, website_livechat: hide cookies bar on policy page
With the popup-styled cookies bar, the cookies policy page is
unreadable. It is also the case with all cookies bar with a backdrop, or
if they are too tall.
The "discrete" and "classic" bars can also potentially hide the last
paragraph(s) of the page.
To avoid that, this commit adds a button to toggle the bar on that page.

Note that the cookies policy page could be on any URL, but it has to be
referenced in the `a.o_cookies_bar_text_policy` link within the cookies
bar.

task-3733860

X-original-commit: 2b1bfff3ec496c04a5b8198512cc38610aded60f

--- a/addons/website_livechat/static/src/embed/livechat_button_patch.scss
+++ b/addons/website_livechat/static/src/embed/livechat_button_patch.scss
@@ -24,3 +24,11 @@
         transform: scale(1);
     }
 }
+
+// Shift cookies bar show/hide button to the side of livechat button.
+.o_cookies_bar_toggle {
+    $-o-livechat-button-margin: 48px;
+    // Livechat button size + margin + arbitrary gap.
+    inset-inline-end: calc(56px + #{$-o-livechat-button-margin} + 1rem);
+    inset-block-end: var(--cookies-bar-toggle-inset-block-end, #{$-o-livechat-button-margin});
+}
